--- a/ConcertBooking.Web/Views/_ViewImports.cshtml
+++ b/ConcertBooking.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using ConcertBooking.Web
 @using ConcertBooking.Web.Models
 @using ConcertBooking.Web.ViewModels.ArtistViewModels
+@using ConcertBooking.Web.ViewModels.ConcertViewModels
+@using ConcertBooking.Web.ViewModels.DashboardViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
