--- a/ConcertBooking.Web/Views/Concerts/Index.cshtml
+++ b/ConcertBooking.Web/Views/Concerts/Index.cshtml
@@ -1,15 +1,13 @@
 ﻿@model IEnumerable<ConcertViewModel>
-
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Concert List</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-info">Create New</a>
 </p>
-
 <table class="table">
     <thead>
         <tr>
@@ -28,10 +26,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.ArtistName)
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach(var item in Model) {
+        @foreach (var item in Model)
+        {
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.Id)
@@ -50,10 +50,11 @@
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                    @Html.ActionLink("GetTickets", "GetTickets", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
