--- a/ConcertBooking.Web/Views/Artists/Edit.cshtml
+++ b/ConcertBooking.Web/Views/Artists/Edit.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input type="hidden" asp-for="Id" class="form-control" />
