--- a/ConcertBooking.Web/Views/_ViewImports.cshtml
+++ b/ConcertBooking.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using ConcertBooking.Web.ViewModels.ArtistViewModels
 @using ConcertBooking.Web.ViewModels.ConcertViewModels
 @using ConcertBooking.Web.ViewModels.DashboardViewModels
+@using ConcertBooking.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
